multi-ipc.yml
apiVersion: v1
kind: Pod
metadata:
  name: mc2
spec: 
  containers:
    - name: 1st
      image: allingeek/ch6_ipc
      command: ["./ipc", "-producer"]
    - name: 2nd
      image: allingeek/ch6_ipc
      command: ["./ipc", "-consumer"] 
  restartPolicy: Never
