multi_network.yml
apiVersion: v1
kind: Pod
metadata:
  name: mc3
  labels:
    app: mc3
spec:
      containers:
      - name: webapp
        image: training/webapp
      - name: nginx
        image: nginx:alpine  
        ports:
        - containerPort: 80
        volumeMounts:
        -   name: nginx-proxy-config
            mountPath: /etc/nginx/nginx.conf # mount nginx-conf volumn to /etc/nginx
            subPath: nginx.conf
      volumes:
      - name: nginx-proxy-config
        configMap:
          name: mc3-nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
