p.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod3
  labels:
    app: web

spec:
  containers:
  - name: myc1
    image: vimal13/apache-webserver-php
